# jarvis-chatbot-1-0

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run_benchmarks.py  starting.bat
system_cuda/: config.py
