[tool.poetry]
name = "jarvis-1-0"
version = "1.0.0"
description = "Jarvis Bot est un chatbot intelligent qui utilise le modèle de langage Llama pour répondre aux requêtes des utilisateurs. L'interface utilisateur est créée avec Streamlit, ce qui permet une interaction conviviale et intuitive."
authors = ["Beuvelet David"]
license = "Apache"
readme = "README.md"
packages = [{include = "jarvis_1"}]

[tool.poetry.dependencies]
python = "^3.11"

aiohttp = "^3.9.3"
aiosignal = "^1.3.1"
altair = "^4.2.2"
annotated-types = "^0.6.0"
anyio = "^4.2.0"
attrs = "^23.2.0"
blinker = "^1.7.0"
build = "^1.0.3"
CacheControl = "^0.13.1"
cachetools = "^5.3.2"
certifi = "^2023.11.17"
charset-normalizer = "^3.3.2"
cleo = "^2.1.0"
click = "^8.1.7"
colorama = "^0.4.6"
crashtest = "^0.4.1"
dataclasses-json = "^0.6.3"
diskcache = "^5.6.3"
distlib = "^0.3.8"
dulwich = "^0.21.7"
entrypoints = "^0.4"
fastjsonschema = "^2.19.1"
filelock = "^3.13.1"
frozenlist = "^1.4.1"
gitdb = "^4.0.11"
GitPython = "^3.1.41"
greenlet = "^3.0.3"
idna = "^3.6"
importlib-metadata = "^7.0.1"
installer = "^0.7.0"
Jinja2 = "^3.1.3"
jsonpatch = "^1.33"
jsonpointer = "^2.4"
jsonschema = "^4.21.1"
jsonschema-specifications = "^2023.12.1"
keyring = "^24.3.0"
langchain = "^0.1.4"
langchain-community = "^0.0.16"
langchain-core = "^0.1.17"
langsmith = "^0.0.85"
llama_cpp_python = "^0.2.37"
markdown-it-py = "^3.0.0"
MarkupSafe = "^2.1.4"
marshmallow = "^3.20.2"
mdurl = "^0.1.2"
more-itertools = "^10.2.0"
msgpack = "^1.0.7"
multidict = "^6.0.4"
mypy-extensions = "^1.0.0"
numpy = "^1.26.3"
packaging = "^23.2"
pandas = "^1.5.3"
pexpect = "^4.9.0"
pillow = "^10.2.0"
pkginfo = "^1.9.6"
platformdirs = "^3.11.0"
poetry = "^1.7.1"
poetry-core = "^1.8.1"
poetry-plugin-export = "^1.6.0"
protobuf = "^3.20.3"
ptyprocess = "^0.7.0"
pyarrow = "^15.0.0"
pydantic = "^2.6.0"
pydantic_core = "^2.16.1"
pydeck = "^0.8.1b0"
Pygments = "^2.17.2"
Pympler = "^1.0.1"
pyproject_hooks = "^1.0.0"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.1"
pytz = "^2023.4"
pywin32-ctypes = "^0.2.2"
PyYAML = "^6.0.1"
rapidfuzz = "^3.6.1"
referencing = "^0.33.0"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
rich = "^13.7.0"
rpds-py = "^0.17.1"
shellingham = "^1.5.4"
six = "^1.16.0"
smmap = "^5.0.1"
sniffio = "^1.3.0"
SQLAlchemy = "^2.0.25"
streamlit = "^1.21.0"
tenacity = "^8.2.3"
toml = "^0.10.2"
tomlkit = "^0.12.3"
toolz = "^0.12.1"
tornado = "^6.4"
trove-classifiers = "^2024.1.8"
typing-inspect = "^0.9.0"
typing_extensions = "^4.9.0"
tzdata = "^2023.4"
tzlocal = "^5.2"
urllib3 = "^2.2.0"
validators = "^0.22.0"
virtualenv = "^20.25.0"
watchdog = "^3.0.0"
yarl = "^1.9.4"
zipp = "^3.17.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
